personal-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-site
spec:
  selector:
    app: personal-site
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
